Trying to fix UI on iOS. (Width of input fields). Second Attempt

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,15 +50,15 @@ label {
 }
 
 input {
-  margin: 0 1rem 1rem 0;
-  width: 100%;
+  margin: 0 0 1rem 0;
+  width: 97%;
   height: 3rem;
   font-size: 2.5rem;
 }
 
 select {
   margin: 0;
-  width: 100.7%;
+  width: 97.7%;
   height: 3rem;
   font-size: 2.5rem;
   background-color: white;
